<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.jgabrielfreitas.core.BlurImageView
                    android:id="@+id/iv_event_blur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/event_placeholder"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

            <ImageView
                    android:id="@+id/iv_event"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/event_image_height"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:scaleType="fitCenter"
                    android:src="@drawable/event_placeholder"/>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_medium_2"
                android:paddingEnd="@dimen/margin_medium_2"
                android:orientation="vertical">

            <org.mmtextview.components.MMTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_event_title"
                    android:textSize="@dimen/text_regular_3x"
                    android:textColor="@color/black_full"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:textStyle="bold"/>

            <org.mmtextview.components.MMTextView
                    android:id="@+id/lbl_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:drawableStart="@drawable/ic_group_black_24dp"
                    android:drawablePadding="@dimen/margin_medium"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_full"
                    android:text="@string/title_event_group"/>

            <org.mmtextview.components.MMTextView
                    android:id="@+id/tv_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textColor="@color/black_full"
                    android:textStyle="bold"
                    android:text="@string/dummy_event_group"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:background="@color/black_full"/>

            <org.mmtextview.components.MMTextView
                    android:id="@+id/lbl_event_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:drawableStart="@drawable/ic_time_black_24dp"
                    android:drawablePadding="@dimen/margin_medium"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_full"
                    android:text="@string/title_event_datetime"/>

            <org.mmtextview.components.MMTextView
                    android:id="@+id/tv_event_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textColor="@color/black_full"
                    android:textStyle="bold"
                    android:text="@string/dummy_event_time"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:background="@color/black_full"/>

            <org.mmtextview.components.MMTextView
                    android:id="@+id/lbl_event_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:drawableStart="@drawable/ic_place_black_24dp"
                    android:drawablePadding="@dimen/margin_medium"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_full"
                    android:text="@string/title_event_location"/>




        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@android:drawable/stat_sys_phone_call" />

</android.support.design.widget.CoordinatorLayout>