<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        app:cardCornerRadius="@dimen/margin_small"
        app:cardElevation="@dimen/margin_small">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <FrameLayout
                android:id="@+id/fl_album_image_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_image_height">

            <ImageView
                    android:id="@+id/iv_album"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/album_placeholder"/>

            <org.mmtextview.components.MMTextView
                    android:id="@+id/tv_song_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:textColor="@color/white_full"
                    android:padding="@dimen/margin_medium"
                    android:layout_gravity="bottom"
                    android:text="@string/dummy_song_count"/>

        </FrameLayout>

        <org.mmtextview.components.MMTextView
            android:id="@+id/tv_album_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_album_title"
            android:layout_below="@id/fl_album_image_container"
            android:paddingStart="@dimen/margin_medium_2"
            android:paddingTop="@dimen/margin_medium_2"
            android:paddingEnd="@dimen/margin_medium_2"
            android:textColor="@color/black_full"
            android:textStyle="bold"
            android:textSize="@dimen/text_regular_2x"/>

        <org.mmtextview.components.MMTextView
                android:id="@+id/tv_album_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_album_price"
                android:layout_below="@id/tv_album_title"
                android:paddingStart="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_small"
                android:paddingEnd="@dimen/margin_medium_2"
                android:paddingBottom="@dimen/margin_medium_2"
                android:textColor="@color/black_full"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_money_black_24dp"
                android:textSize="@dimen/text_regular"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>